fix(noUnknownPseudoClass): not error for unknown pseudo class after webkit scrollbar pseudo class

--- a/crates/biome_css_analyze/tests/specs/nursery/noUnknownPseudoClass/valid.css
+++ b/crates/biome_css_analyze/tests/specs/nursery/noUnknownPseudoClass/valid.css
@@ -35,3 +35,4 @@ a:defined { }
 *:is(*) { }
 :popover-open {}
 :seeking, :stalled, :buffering, :volume-locked, :muted {}
+::-webkit-scrollbar-button:hover {}
